docs: add list openings swagger doc
